--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -38,14 +38,23 @@ body {
     /* flex: flex-grow; */
 
   }
-
-.nav-link {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.navbar{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr; 
+    text-align: center;
     background: pink;
 }
-
+.nav-link{
+    text-decoration: none;
+}
+.text-center {
+    display: grid;
+    text-align: center;
+}
+.pollFormComponents{
+    display: grid;
+    text-align: center;
+}
 .form-wrapper {
     width: 40%;
 }
