--- a/client/stylesheets/styles.scss
+++ b/client/stylesheets/styles.scss
@@ -6,8 +6,20 @@ html, body {
     width: 100vw;
     height: 100vh;
     position: relative;
-    overflow: hidden;
-    background: linear-gradient(#123, #111);
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background: linear-gradient(rgb(20, 47, 74), #111);
+
+  }
+
+  html::-webkit-scrollbar, body::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  html, body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
   }
   
   .snowflake {
@@ -25,7 +37,7 @@ html, body {
       transform: translate3d(var(--left-ini), 0, 0);
     }
     100% {
-      transform: translate3d(var(--left-end), 110vh, 0);
+      transform: translate3d(var(--left-end), 105vh, 0);
     }
   }
   
@@ -58,16 +70,25 @@ body {
     margin: 0px;
     line-height: 1.3;
     font-family: Montserrat;
-    color: rgb(59, 59, 59);
+    color: rgb(209, 209, 209);
 }
 
 #title {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 8vh;
 }
 
 .displayPrompt {
-    margin: 5% 5%
+    text-align: center;
+    width: 100%;
+    font-family: Roboto;
+    margin: 0;
+    padding: 0;
+}
+
+.displayPrompt h1 {
+    margin: 0;
+    padding: 0;
 }
 
 .displayPoll {
@@ -78,7 +99,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
 
 .display-list-group {
@@ -86,16 +106,20 @@ body {
 }
 
 .display-list-group2 {
-    width: 800px;
+    //display: none;
+}
 
+.barchartdiv {
+    min-width: 60%;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
 }
 
 .display-barchart {
-    /* margin: 10rem 10rem 10rem 10rem; */
-    width: 800px;
-
-    /* flex: flex-grow; */
-
+    flex-basis: 100%;
   }
 
 .navbar{
@@ -108,7 +132,7 @@ body {
 
 #newPollhr {
     border: 1px solid gainsboro;
-    margin-bottom: 3em;
+    margin-bottom: 5vh;
     width: 100%
 }
 
@@ -121,11 +145,11 @@ body {
     max-width: 70%;
     border-radius: 10px;
     height: 50px;
-    min-width: 10%;
+    min-width: 13%;
 }
 
 .nav-link:visited {
-    color: rgb(125, 125, 125);
+    color: rgb(209, 209, 209);
 }
 
 .nav-link:hover {
@@ -148,7 +172,7 @@ body {
 .newPollContainer h2:hover, p:hover {
     cursor: default;
     font-family: Montserrat;
-    color: rgb(188, 188, 188);
+    color: rgb(238, 238, 238);
 }
 
 .newPollContainer label {
@@ -166,6 +190,9 @@ input {
     border-style: solid;
     padding-left: 8px;
     font-size: 16px;
+    color: rgb(55, 55, 55);
+    font-weight: 550;
+    font-family: Roboto;
 }
 
 .newPoll {
@@ -174,25 +201,29 @@ input {
 
 .newPoll input {
     width: 50%;
-    margin-bottom: 20px;
-    margin-top: 15px;
+    margin-bottom: 1vh;
+    margin-top: 1vh;
 }
 
 #answerOptions {
-    margin-bottom: 15px;
+    margin-bottom: 2vh;
 }
 
 .pollOption {
     display: flex;
     justify-content: center;
     gap: 1em;
-    margin-bottom: 10px;
+    margin-bottom: 1vh;
 }
 
 .pollOption button {
     width: 35px;
     font: arial;
     font-weight: 600;
+}
+
+.pollOption input {
+    width: 30%
 }
 
 .addOption {
@@ -212,6 +243,7 @@ input {
 .pollFormComponents {
     display: grid;
     text-align: center;
+    max-height: 70vh;
 }
 
 .signupHTag{
@@ -223,7 +255,7 @@ input {
 .signupHTag:hover{
     cursor: default;
     font-family: Montserrat;
-    color: rgb(188, 188, 188);
+    color: rgb(238, 238, 238);
 }
 
 .signupPage {
@@ -231,6 +263,18 @@ input {
     justify-items: center;
     grid-row-gap: 2px
 }
+
+.numOfQuestions {
+    max-height: 40vh;
+    overflow-y: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.numOfQuestions::-webkit-scrollbar{
+    display: none;
+  }
+
 
 .signupEmailForm {
     box-sizing: content-box;
